<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:text="@string/app_name"/>


    <EditText
        android:id="@+id/edtPriceFirstGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:inputType="numberDecimal"
        android:hint="@string/hintPriceFirstGame"/>

    <EditText
        android:id="@+id/edtDiscountPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:inputType="numberDecimal"
        android:hint="@string/hintDiscountPrice"/>

    <EditText
        android:id="@+id/edtLowerPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:inputType="numberDecimal"
        android:hint="@string/hintLowerPrice"/>

    <EditText
        android:id="@+id/edtBudget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:inputType="numberDecimal"
        android:hint="@string/hintBudget"/>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textCalculate" />

</LinearLayout>